@@ -19,6 +19,9 @@ def _make_prune_flags(retention_config):
             ('--keep-monthly', '6'),
         )
     '''
+    if not retention_config.get('prefix'):
+        retention_config['prefix'] = '{hostname}-'
+
     return (
         ('--' + option_name.replace('_', '-'), str(retention_config[option_name]))
         for option_name, value in retention_config.items()
